--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,23 @@
     <string name="gift_cards">Cartes cadeaux</string>
     <string name="tobeortohavelogo">ToBeOrToHaveLogo</string>
     <string name="home">Accueil</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="connexion">Connexion</string>
+    <string name="logo">logo</string>
+    <string name="bg">bg</string>
+    <string name="mot_de_passe">Mot de passe</string>
+    <string name="connexion_ou_s_enregistrer">Connexion ou s\'enregistrer</string>
 </resources>
