--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="mot_de_passe">Mot de passe</string>
     <string name="connexion_ou_s_enregistrer">Connexion ou s\'enregistrer</string>
     <string name="news">Actualités</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
