--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="register_link_fr"><u>Pas encore inscrit ? Cliquez ici</u></string>
     <string name="logout_fr">Deconnexion</string>
     <string name="connexion_title">Connexion</string>
+    <string name="add_task_button">Ajouter article</string>
 </resources>
