attempt to open created tag

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="qrdroid_alert">QRDroid n\'est pas installé</string>
     <string name="ok">OK</string>
     <string name="cancel">Annuler</string>
+    <string name="qrcode_create_title">Combien de points voulez-vous donner ?</string>
 </resources>
